--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://zyzyx.github.io/"
 languageCode = "en-us"
 title = "Website for Jay Greguske"
 theme = "notepadium"
