--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,8 @@
     url = https://github.com/cntrump/hugo-notepadium.git
 [submodule "public"]
 	path = public
-	url = https://github.com/zyzyx/zyzyx.github.io.git
+	url = git@github.com:/zyzyx/zyzyx.github.io.git
 	branch = master
+[submodule "themes/notepadium"]
+	path = themes/notepadium
+	url = https://github.com/cntrump/hugo-notepadium.git
