--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,4 @@
 [submodule "themes/notepadium"]
 	path = themes/notepadium
 	url = https://github.com/cntrump/hugo-notepadium.git
+    branch = master
